--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "league-lobby-revealer"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.98"
 console = "*"
 reqwest = { version = "0.11", features = ["blocking", "default-tls"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -22,3 +23,6 @@ features = [
     "Win32_Security",
     "Win32_System_Variant",
 ]
+
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
